Fixed dropdowns visibility on the  700px viewport

--- a/style.css
+++ b/style.css
@@ -144,15 +144,12 @@ body {
   }
 
   .nav-links {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
     background-color: #001427;
+    top: 100%;
+    width: 100%;
     padding: 10px;
+    position: absolute;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
   }
 
   .nav-links li {
